# options-pricing-trainer

./: .gitignore  Dockerfile  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: options-pricing-trainer.tex
examples/: demo.py
src/: __init__.py  cli.py
src/core/: __init__.py  binomial.py  black_scholes.py  delta_hedge.py  greeks.py  implied_vol.py  monte_carlo.py  payoff.py
src/viz/: app.py
tests/: test_binomial.py  test_black_scholes.py  test_greeks.py  test_implied_vol.py  test_parity.py
